--- a/prod/www/index.html
+++ b/prod/www/index.html
@@ -1,1 +1,129 @@
-<!doctype html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="description" content=""> <meta name="viewport" content="width=device-width, initial-scale=1"> <title>Emmanuel</title> <link rel="stylesheet" href="ba9e693a36c416f546ed7bca280f62b9.css"> <link rel="stylesheet" href="50f24f90cd33c9a64159686dcbaf9e30.css">  <link rel="manifest" href="78e0919d0812dc1251dff19649a3f234.js">  <meta name="mobile-web-app-capable" content="yes"> <meta name="application-name" content="Emmanuel gr"> <link rel="icon" sizes="192x192" href="5d0ef84851d547887253ea6bd0ca0eb1.png">  <meta name="apple-mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-status-bar-style" content="black"> <meta name="apple-mobile-web-app-title" content="Emmanuel.gr"> <link rel="apple-touch-icon" href="04cd08680835302efff92cfec776da9f.png">  <meta name="msapplication-TileImage" content="248ecf685f683e64a62c6eaed5a36022.png"> <meta name="msapplication-TileColor" content="#FFE082">  <meta name="theme-color" content="#FFE082"> </head> <body> <div id="container"> <div id="bgs"> <div id="bgColor"></div> </div> <div id="world"> <p id="text"> <span id="hello">Hello</span> <span> </span> <span id="there" class="fg-grey-200">&nbspthere!</span> <span id="iamPapa"> <span id="iam">I&nbspam</span> <span id="eme"> <span>E</span> <span>m</span> <span>m</span> <span>a</span> <span>n</span> <span>u</span> <span>e</span> <span>l</span> </span> </span> <span id="votis"> <span>V</span> <span>o</span> <span>c</span> <span>h</span> <span>a</span> <span>i</span> <span>t</span> <span>i</span> <span>s</span> </span> <span id="a">a&nbspSenior</span> <span id="software">&nbspSoftware</span> <span id="dev">&nbspDeveloper</span> <span id="ageek">a</span> <span id="geek">geek</span> <span id="by">by</span> <span id="nature">nature</span> <span id="creative-group"> <span id="creative">&nbspcreative</span> <span id="byheart">by</span> <span id="heart">&nbspheart</span> </span> </p> <section> <p> <span id="hire"> <span id="hi">hi</span> <span id="re">re</span> <span id="me">me</span> </span> <span id="outro"> <span>Lets</span> <span>Talk</span> </span> </p> <p id="scroll-up">scroll up to replay</p> </section> </div> <div id="fgs"></div> <div id="spinners"></div> </div> <div id="timeline"></div> <div id="scrolltainer"> <div id="scrolltent"> </div> </div> <div id="time">00</div> <div id="title"> <h4>BETA</h4> </div> <a id="emailme" href="mailto:reachoutemmanuel@gmail.com"> <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/><path d="M0 0h24v24H0z" fill="none"/></svg> </a>  <script src="08382234408ac2b57cd93cdd9b575baa.js"></script>  <script>!function(e,a,t,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=a.createElement(t),s=a.getElementsByTagName(t)[0],o.async=1,o.src="//www.google-analytics.com/analytics.js",s.parentNode.insertBefore(o,s)}(window,document,"script",0,"ga"),ga("create","UA-8024535-1","auto"),ga("send","pageview");</script>  </body> </html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Emmanuel</title>
+
+    <link rel="stylesheet" href="ba9e693a36c416f546ed7bca280f62b9.css">
+    <link rel="stylesheet" href="50f24f90cd33c9a64159686dcbaf9e30.css">
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="78e0919d0812dc1251dff19649a3f234.js">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Emmanuel gr">
+    <link rel="icon" sizes="192x192" href="5d0ef84851d547887253ea6bd0ca0eb1.png">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Emmanuel.gr">
+    <link rel="apple-touch-icon" href="04cd08680835302efff92cfec776da9f.png">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="248ecf685f683e64a62c6eaed5a36022.png">
+    <meta name="msapplication-TileColor" content="#FFE082">
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#FFE082">
+</head>
+
+<body>
+    <div id="container">
+        <div id="bgs">
+            <div id="bgColor"></div>
+        </div>
+        <div id="roses"></div>
+        <div id="world">
+            <p id="text">
+                <span id="hello">Hello</span>
+                <span> </span>
+                <span id="there" class="fg-grey-200">&nbspthere!</span>
+                <span id="iamPapa">
+                    <span id="iam">I&nbspam</span>
+                    <span id="eme">
+                        <span>E</span>
+                        <span>m</span>
+                        <span>m</span>
+                        <span>a</span>
+                        <span>n</span>
+                        <span>u</span>
+                        <span>e</span>
+                        <span>l</span>
+                    </span>
+                </span>
+                <span id="votis">
+                    <span>V</span>
+                    <span>o</span>
+                    <span>c</span>
+                    <span>h</span>
+                    <span>a</span>
+                    <span>i</span>
+                    <span>t</span>
+                    <span>i</span>
+                    <span>s</span>
+                </span>
+                <span id="a">a&nbspSenior</span>
+                <span id="software">&nbspSoftware</span>
+                <span id="dev">&nbspDeveloper</span>
+                <span id="ageek">a</span>
+                <span id="geek">geek</span>
+                <span id="by">by</span>
+                <span id="nature">nature</span>
+                <span id="creative-group">
+                    <span id="creative">&nbspcreative</span>
+                    <span id="byheart">by</span>
+                    <span id="heart">&nbspheart</span>
+                </span>
+            </p>
+            <section>
+                <p>
+                    <span id="hire">
+                        <span id="hi">hi</span>
+                        <span id="re">re</span>
+                        <span id="me">me</span>
+                    </span>
+                    <span id="outro">
+                        <span>Lets</span>
+                        <span>Talk</span>
+                    </span>
+                </p>
+                <p id="scroll-up">scroll up to replay</p>
+            </section>
+        </div>
+        <div id="fgs"></div>
+        <div id="spinners"></div>
+    </div>
+    <div id="timeline"></div>
+    <div id="scrolltainer">
+        <div id="scrolltent">
+        </div>
+    </div>
+    <div id="time">00</div>
+    <div id="title">
+        <h4>BETA</h4>
+    </div>
+        <a id="emailme" href="mailto:emmanuelatwork@gmail.com">
+            <svg viewbox="0 0 24 24">
+                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"></path>
+                <path d="M0 0h24v24H0z" fill="none"></path>
+            </svg>
+    </a>
+    
+    <script src="08382234408ac2b57cd93cdd9b575baa.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-8024535-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- Built with love using Web Starter Kit -->
+</body>
+
+</html>
