--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
         <div id="bgs">
             <div id="bgColor"></div>
         </div>
+        <div id="roses"></div>
         <div id="world">
             <p id="text">
                 <span id="hello">Hello</span>
@@ -88,7 +89,7 @@
                         <span>Talk</span>
                     </span>
                 </p>
-                <p id='scroll-up'>scroll up to replay</p>
+                <p id='scroll-up'>scroll to replay</p>
             </section>
         </div>
         <div id="fgs"></div>
@@ -104,7 +105,7 @@
         <h4>BETA</h4>
     </div>
         <a id="emailme" href="mailto:emmanuelatwork@gmail.com">
-            <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 24 24">
                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
                 <path d="M0 0h24v24H0z" fill="none" />
             </svg>
