--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
     <title>Emmanuel</title>
 
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./colors.css">
 
     <!-- Web Application Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -39,40 +38,25 @@
             <p id="text">
                 <span id="hello">Hello</span>
                 <span> </span>
-                <span id="there" class='fg-grey-200'>&nbspthere!</span>
+                <span id="there">there!</span>
                 <span id="iamPapa">
                     <span id="iam">I&nbspam</span>
                     <span id="eme">
-                        <span>E</span>
-                        <span>m</span>
-                        <span>m</span>
-                        <span>a</span>
-                        <span>n</span>
-                        <span>u</span>
-                        <span>e</span>
-                        <span>l</span>
+                        <span>E</span><span>m</span><span>m</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span>
                     </span>
                 </span>
                 <span id="votis">
-                    <span>V</span>
-                    <span>o</span>
-                    <span>c</span>
-                    <span>h</span>
-                    <span>a</span>
-                    <span>i</span>
-                    <span>t</span>
-                    <span>i</span>
-                    <span>s</span>
+                    <span>V</span><span>o</span><span>c</span><span>h</span><span>a</span><span>i</span><span>t</span><span>i</span><span>s</span>
                 </span>
                 <span id="a">a&nbspSenior</span>
-                <span id="software">&nbspSoftware</span>
-                <span id="dev">&nbspDeveloper</span>
+                <span id="software">Software</span>
+                <span id="dev">Developer</span>
                 <span id="ageek">a</span>
                 <span id="geek">geek</span>
                 <span id="by">by</span>
                 <span id="nature">nature</span>
                 <span id="creative-group">
-                    <span id="creative">&nbspcreative</span>
+                    <span id="creative">creative</span>
                     <span id="byheart">by</span>
                     <span id="heart">&nbspheart</span>
                 </span>
@@ -80,13 +64,11 @@
             <section>
                 <p>
                     <span id="hire">
-                        <span id=hi>hi</span>
-                        <span id="re">re</span>
+                        <span id=hi>hi</span><span id="re">re</span>
                         <span id="me">me</span>
                     </span>
                     <span id='outro'>
-                        <span>Lets</span>
-                        <span>Talk</span>
+                        <span>Lets</span><span>Talk</span>
                     </span>
                 </p>
                 <p id='scroll-up'>scroll to replay</p>
